--- a/public/index.html
+++ b/public/index.html
@@ -46,27 +46,27 @@
     <meta property="og:title" content="Facundo Utrico" />
     <meta
       property="og:description"
-      content="Hey! I'm a software engineer with a focus on front-end web & a love for emerging tech."
+      content="Hey! I'm a programming student specializing in backend! I currently work as a freelancer on Fiverr."
     />
     <meta
       property="og:image"
-      content="https://www.jigalin.com/PUTMETAPICHERE.png"
+      content="https://www.facundo-utrico.com/PUTMETAPICHERE.png"
     />
-    <meta property="og:url" content="https://www.jigalin.com" />
+    <meta property="og:url" content="https://www.facundo-utrico.com" />
     <meta property="og:site_name" content="Facundo Utrico" />
     <meta name="twitter:title" content="Facundo Utrico" />
     <meta name="twitter:card" content="summary_large_image" />
     <meta
       name="twitter:description"
-      content="Hey! I'm a software engineer with a focus on front-end web & a love for emerging tech."
+      content="Hey! I'm a programming student specializing in backend! I currently work as a freelancer on Fiverr."
     />
     <meta
       name="twitter:image"
-      content="https://www.jigalin.com/PUTMETAPICHERE.png"
+      content="https://www.facundo-utrico.com/PUTMETAPICHERE.png"
     />
     <title>Facundo Utrico</title>
     <script>
-      var host = 'www.jigalin.com'
+      var host = 'www.facundo-utrico.com'
       if (
         host == window.location.host &&
         window.location.protocol != 'https:'
